--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Departamento de Cartografia Digital</h1>
 <h2>GeoPortal Carto-Delictivo</h2>
+  <p> Parrafo Agregado <p>
 </body>
 </html>
